--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
                 margin: 5px;
             }
         </style>
-        <script src="./dist/bundle.js"></script>
+        <script src="../dist/bundle.js"></script>
         <script>
 
             window.addEventListener('load', onload)
@@ -14,8 +14,8 @@
                 const keys = JsonFormLoader.getKeys()
                 document.getElementById('key-candidates').textContent = keys.join(' ')
                 JsonFormLoader.setOptions({
-                    depsUrl: './lib/jsonform/deps/',
-                    jsonFormUrl: './lib/jsonform/lib/jsonform.js'
+                    depsUrl: '../lib/jsonform/deps/',
+                    jsonFormUrl: '../lib/jsonform/lib/jsonform.js'
                 })
             }
 
